--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ nav{
     color: black;
 }
 .card h3{
-    color: #FF008E;
+    color: black;
     font-size: 25px;
 }
 .card p{
@@ -153,7 +153,7 @@ nav{
 }
 .card a{
     text-decoration: none;
-    color: #FF008E;
+    color: black;
 }
 .fa-star.filled{
     color: #FFC014;
